[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Sprites/PLAYER/Alt/MC_Alt_0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/MC_Alt_4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/Idle/MC_Alt_Idle_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/MC_Alt_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/Idle/MC_Alt_Idle_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/MC_Alt_5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/MC_Alt_7.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/MC_Alt_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/Idle/MC_Alt_Idle_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/MC_Alt_3.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/PLAYER/Alt/MC_Alt_6.png" type="Texture" id=11]
[ext_resource path="res://Assets/Audio/Effects/Footsteps/Player/player_footstep.tres" type="AudioStream" id=12]
[ext_resource path="res://Characters/Player/states/interactions/wait_for_dialogue.gd" type="Script" id=13]
[ext_resource path="res://Characters/Player/Alt_Player.gd" type="Script" id=14]
[ext_resource path="res://Characters/enemies/Chimera/states/fall.gd" type="Script" id=15]
[ext_resource path="res://Characters/enemies/Chimera/states/patrol.gd" type="Script" id=18]
[ext_resource path="res://engine/Physics2D.gd" type="Script" id=28]

[sub_resource type="CapsuleShape2D" id=1]
radius = 109.517
height = 537.614

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "Move",
"speed": 12.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 6.0
} ]

[node name="Alt_Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 14 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 5000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 50.1356, -60.27 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Move"
frame = 7

[node name="Physics2D" type="Node2D" parent="."]
script = ExtResource( 28 )

[node name="Footsteps" type="Node2D" parent="."]

[node name="FootstepPlayer" type="AudioStreamPlayer2D" parent="Footsteps"]
stream = ExtResource( 12 )
pitch_scale = 0.7
max_distance = 5000.0
attenuation = 0.574349

[node name="FootstepTimer" type="Timer" parent="Footsteps"]
wait_time = 0.35

[node name="States" type="Node2D" parent="."]

[node name="Idle" type="Node2D" parent="States"]
script = ExtResource( 13 )

[node name="Fall" type="Node2D" parent="States"]
script = ExtResource( 15 )

[node name="Patrol" type="Node2D" parent="States"]
script = ExtResource( 18 )
SPEED = 600.0
